# computer_systems

./: .gitignore
task_1/: CMakeLists.txt  Пояснительная_записка_Ефим_Верзаков.docx
task_1/code/: animal.cpp  animal.h  beast.cpp  beast.h  bird.cpp  bird.h  constants.h  container.cpp  container.h  fish.cpp  fish.h  main.cpp  rnd.h
task_1/tests/: rnd_out_01.txt  rnd_out_02.txt  test01_out_01.txt  test01_out_02.txt  test02.txt  test02_out_01.txt  test02_out_02.txt  test03.txt  test03_out_01.txt  test03_out_02.txt  test04_out_01.txt  test04_out_02.txt  test05_out_01.txt  test05_out_02.txt  test06_out_01.txt  test06_out_02.txt  test07_out_01.txt  test07_out_02.txt
task_2/: CMakeLists.txt  Пояснительная_записка_Ефим_Верзаков.docx
task_2/code/: animal.cpp  animal.h  beast.cpp  beast.h  bird.cpp  bird.h  constants.h  container.cpp  container.h  fish.cpp  fish.h  main.cpp  rnd.h
task_2/tests/: rnd01_out_01.txt  rnd01_out_02.txt  test01.txt  test01_out_01.txt  test01_out_02.txt  test02.txt  test02_out_01.txt  test02_out_02.txt  test03.txt  test03_out_01.txt  test03_out_02.txt  test04.txt  test04_out_01.txt  test04_out_02.txt  test05.txt  test05_out_01.txt  test05_out_02.txt
task_3/: Пояснительная_записка_Ефим_Верзаков.docx
task_3/docs/: Untitled Diagram.drawio
task_3/src/: animal.py  beast.py  bird.py  constants.py  container.py  fish.py  main.py  rnd.py
task_3/tests/: rnd01.txt  rnd02.txt  test01.txt  test01_out_01.txt  (+22 more)
task_4/task_4_c/: CMakeLists.txt  start
task_4/task_4_c/code/: constants.h  extdata.h  input.c  main.c  output.c  sort.asm
task_4/task_4_c/tests/: rnd01_out_01.txt  rnd01_out_02.txt  test01.txt  test01_out_01.txt  test01_out_02.txt  test02.txt  test02_out_01.txt  test02_out_02.txt  test03.txt  test03_out_01.txt  test03_out_02.txt  test04.txt  test04_out_01.txt  test04_out_02.txt  test05.txt  test05_out_01.txt  test05_out_02.txt
task_5/: CMakeLists.txt  main.c
(+32 files in other folders)
